# ov_self_build_model_example

./: .gitignore  CMakeLists.txt  README.md  header.hpp  main.cpp  src.cpp  utils.py
cpp/: CMakeLists.txt  README.md  compare_cpu_template.cpp  header.hpp  main.cpp  model_conv_bias_sum_reshape.cpp  model_multiply.cpp  model_stateful.cpp
cpp/header/: private.hpp  profiler.cpp  profiler.hpp  utils.hpp
cpp/src/: compare_cpu_template.cpp  main.cpp  model_build_position_ids.cpp  model_concat.cpp  model_conv_bias_sum_reshape.cpp  model_if.cpp  model_merge_2_ir.cpp  model_multiply.cpp  model_stateful.cpp  remote_tensor.cpp  remote_tensor_dynamic.cpp  test_custom_op_model.cpp  test_share_model_weights_for_2_same_model.cpp  utils.cpp
python/: .gitignore  README.md  check_inputs_outputs_of_model.py  compare_result_and_expected.py  merge_same_structure_models.py  model_ScatterNDUpdate.py  model_broadcast.py  model_broadcast_gather.py  model_concat.py  model_conv_bias_sum_reshape.py  model_gather.py  model_gather_embedding.py  model_gather_embedding_versa.py  model_gelu.py  model_gemm.py  model_if.py  model_if_complex_pattern.py  model_if_readvalue.py  model_layer_norm.py  model_matmul.py  model_multipley.py  model_mvn.py  model_output_add.py  model_readvalue_init_subgraph.py  model_reshape.py  model_sdpa.py  model_sdpa_2.py  model_slice.py  model_stateful.py  model_stateful_readvalue_assign.py  model_topk.py  model_transpose.py  model_update_output.py  model_variadic_split.py  pattern_add_add_conv.py  pattern_gather_add.py  pattern_reshape_eltwise_eltwise.py  run_model_gemm.sh  test.sh  test_gpu.sh
python/custom_op/: .gitignore  README.md  export_ov.py  pipeline_ov.py  run.sh
python/custom_op/1_register_kernel/: .gitignore  README.md  custom_op_utils.py  model_ov.py  run.sh  run_2_custom_op.sh  run_custom_op_2_outputs.sh  test_2_custom_op.py  test_custom_op_2_outputs.py  test_register_custom_op.py
python/custom_op/1_register_kernel/cpp_test_custom_op/: CMakeLists.txt  build.sh  main.cpp  run.sh
python/custom_op/1_register_kernel/cpu/: CMakeLists.txt  custom_add.cpp  custom_add_2_output.cpp  custom_add_2_output.hpp  custom_eltwise.cpp  custom_eltwise.hpp  identity.cpp  identity.hpp  ov_extension.cpp
python/custom_op/1_register_kernel/gpu/: custom_add.cl  custom_add.xml  custom_eltwise.cl  custom_op_with_2_output.cl
python/runtime_info/: README.md  matmul.py
python/utils/: comm_pt.py  load_dump_file.py  load_video.py  random_input.py
